testing/runner/tests/snapshot_tests/setops/snapshots/setops__intersect-multiple-columns.snap
---
source: setops.sqltest
expression: |-
  SELECT name, department FROM current_employees
      INTERSECT
      SELECT name, department FROM former_employees;
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--INTERSECT USING TEMP B-TREE
      `--SCAN former_employees

BYTECODE
addr  opcode         p1  p2  p3  p4              p5  comment
   0  Init            0  27   0                   0  Start at 27
   1  OpenEphemeral   0   0   0                   0  cursor=0 is_table=false
   2  OpenEphemeral   1   0   0                   0  cursor=1 is_table=false
   3  OpenRead        2   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   4  Rewind          2  10   0                   0  Rewind table current_employees
   5    Column        2   1   1                   0  r[1]=current_employees.name
   6    Column        2   2   2                   0  r[2]=current_employees.department
   7    MakeRecord    1   2   3                   0  r[3]=mkrec(r[1..2]); for compound_dedupe
   8    IdxInsert     0   3   0                   8  key=r[3]
   9  Next            2   5   0                   0
  10  OpenRead        3   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
  11  Rewind          3  17   0                   0  Rewind table former_employees
  12    Column        3   1   4                   0  r[4]=former_employees.name
  13    Column        3   2   5                   0  r[5]=former_employees.department
  14    MakeRecord    4   2   6                   0  r[6]=mkrec(r[4..5]); for compound_dedupe
  15    IdxInsert     1   6   0                   8  key=r[6]
  16  Next            3  12   0                   0
  17  Rewind          0  24   0                   0  Rewind  compound_dedupe
  18    RowData       0   7   0                   0  r[7] = data
  19    NotFound      1  23   7                   0  if not found goto 23
  20    Column        0   0   8                   0  r[8]=compound_dedupe.name
  21    Column        0   1   9                   0  r[9]=compound_dedupe.department
  22    ResultRow     8   2   0                   0  output=r[8..9]
  23  Next            0  18   0                   0
  24  Close           1   0   0                   0
  25  Close           0   0   0                   0
  26  Halt            0   0   0                   0
  27  Transaction     0   1   6                   0  iDb=0 tx_mode=Read
  28  Goto            0   1   0                   0
