testing/runner/tests/snapshot_tests/setops/snapshots/setops__subquery-with-union.snap
---
source: setops.sqltest
expression: |-
  SELECT * FROM (
          SELECT name, department FROM current_employees
          UNION
          SELECT name, department FROM former_employees
      ) AS all_employees
      WHERE department = 'Engineering';
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH all_employees USING INDEX ephemeral_subquery_t3 (department=?)
   `--COMPOUND QUERY
      |--LEFT-MOST SUBQUERY
      |  `--SCAN current_employees
      `--UNION USING TEMP B-TREE
         `--SCAN former_employees

BYTECODE
addr  opcode          p1  p2  p3  p4              p5  comment
   0  Init             0  47   0                   0  Start at 47
   1  OpenEphemeral    0   1   0                   0  cursor=0 is_table=true
   2  OpenEphemeral    1   0   0                   0  cursor=1 is_table=false
   3  OpenRead         2   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   4  Rewind           2  10   0                   0  Rewind table current_employees
   5    Column         2   1   3                   0  r[3]=current_employees.name
   6    Column         2   2   4                   0  r[4]=current_employees.department
   7    MakeRecord     3   2   5                   0  r[5]=mkrec(r[3..4]); for compound_dedupe
   8    IdxInsert      1   5   0                   8  key=r[5]
   9  Next             2   5   0                   0
  10  OpenRead         3   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
  11  Rewind           3  17   0                   0  Rewind table former_employees
  12    Column         3   1   3                   0  r[3]=former_employees.name
  13    Column         3   2   4                   0  r[4]=former_employees.department
  14    MakeRecord     3   2   6                   0  r[6]=mkrec(r[3..4]); for compound_dedupe
  15    IdxInsert      1   6   0                   8  key=r[6]
  16  Next             3  12   0                   0
  17  Rewind           1  23   0                   0  Rewind  ephemeral(compound_dedupe)
  18    Column         1   0   3                   0  r[3]=ephemeral(compound_dedupe).name
  19    Column         1   1   4                   0  r[4]=ephemeral(compound_dedupe).department
  20    MakeRecord     3   2   7                   0  r[7]=mkrec(r[3..4]); for
  21    NewRowid       0   8   0                   0  r[8]=rowid
  22    Insert         0   7   8                   4  intkey=r[8] data=r[7]
  23  Next             1  18   0                   0
  24  Close            1   0   0                   0
  25  Once            35   0   0                   0  goto 35
  26  OpenAutoindex    4   0   0                   0  cursor=4
  27  Rewind           0  28   0                   0  Rewind  ephemeral()
  28    Column         0   1  11                   0  r[11]=ephemeral().department
  29    Column         0   0  12                   0  r[12]=ephemeral().name
  30    RowId          0  13   0                   0  r[13]=ephemeral().rowid
  31    MakeRecord    11   3  14                   0  r[14]=mkrec(r[11..13]); for ephemeral_subquery_t3
  32    FilterAdd      4  11   1                   0  bloom_filter_add(r[11..12])
  33    IdxInsert      4  14  11                   0  key=r[14]
  34  Next             0  28   0                   0
  35  String8          0  15   0  Engineering      0  r[15]='Engineering'
  36  Filter           4  46  15                   1  if !bloom_filter(r[15..16]) goto 46
  37  SeekGE           4  46  15                   0  key=[15..15]
  38    IdxGT          4  46  15                   0  key=[15..15]
  39    DeferredSeek   4   0   0                   0
  40    Column         0   0   1                   0  r[1]=ephemeral().name
  41    Column         0   1   2                   0  r[2]=ephemeral().department
  42    Column         4   1   9                   0  r[9]=ephemeral(ephemeral_subquery_t3).name
  43    Column         4   0  10                   0  r[10]=ephemeral(ephemeral_subquery_t3).department
  44    ResultRow      9   2   0                   0  output=r[9..10]
  45  Next             4  38   0                   0
  46  Halt             0   0   0                   0
  47  Transaction      0   1   6                   0  iDb=0 tx_mode=Read
  48  Goto             0   1   0                   0
