testing/runner/tests/snapshot_tests/setops/snapshots/setops__union-subquery-aggregation.snap
---
source: setops.sqltest
expression: "SELECT department, COUNT(*) as total_people\n    FROM (\n        SELECT name, department FROM current_employees\n        UNION ALL\n        SELECT name, department FROM former_employees\n        UNION ALL\n        SELECT name, department FROM contractors\n    ) AS all_workers\n    GROUP BY department\n    ORDER BY total_people DESC;"
info:
  statement_type: SELECT
  tables:
    - contractors
    - current_employees
    - former_employees
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
|--SCAN all_workers
|  `--COMPOUND QUERY
|     |--LEFT-MOST SUBQUERY
|     |  `--SCAN current_employees
|     |--UNION ALL
|     |  `--SCAN former_employees
|     `--UNION ALL
|        `--SCAN contractors
`--USE TEMP B-TREE FOR ORDER BY

BYTECODE
addr  opcode                  p1  p2  p3  p4              p5  comment
   0          Init             0  71   0                   0  Start at 71
   1          InitCoroutine    1  21   2                   0
   2          OpenRead         0   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   3          Rewind           0   8   0                   0  Rewind table current_employees
   4            Column         0   1   2                   0  r[2]=current_employees.name
   5            Column         0   2   3                   0  r[3]=current_employees.department
   6            Yield          1   0   0                   0
   7          Next             0   4   0                   0
   8          OpenRead         1   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
   9          Rewind           1  14   0                   0  Rewind table former_employees
  10            Column         1   1   2                   0  r[2]=former_employees.name
  11            Column         1   2   3                   0  r[3]=former_employees.department
  12            Yield          1   0   0                   0
  13          Next             1  10   0                   0
  14          OpenRead         2   4   0  k(4,B,B,B,B)     0  table=contractors, root=4, iDb=0
  15          Rewind           2  20   0                   0  Rewind table contractors
  16            Column         2   1   2                   0  r[2]=contractors.name
  17            Column         2   2   3                   0  r[3]=contractors.department
  18            Yield          1   0   0                   0
  19          Next             2  16   0                   0
  20          EndCoroutine     1   0   0                   0
  21          SorterOpen       3   1   0  k(1,-B)          0  cursor=3
  22          Null             0  12   0                   0  r[12]=NULL
  23          SorterOpen       4   1   0  k(1,-B)          0  cursor=4
  24          Integer          0   9   0                   0  r[9]=0; clear group by abort flag
  25          Null             0  10   0                   0  r[10]=NULL; initialize group by comparison registers to NULL
  26          Gosub           15  60   0                   0  ; go to clear accumulator subroutine
  27          InitCoroutine    1   0   2                   0
  28            Yield          1  33   0                   0
  29            Copy           3  14   0                   0  r[14]=r[3]
  30            MakeRecord    14   1  13                   0  r[13]=mkrec(r[14..14])
  31            SorterInsert   4  13   0  0                0  key=r[13]
  32          Goto             0  28   0                   0
  33          OpenPseudo       5  13   1                   0  1 columns in r[13]
  34          SorterSort       4  48   0                   0
  35            SorterData     4  13   5                   0  r[13]=data
  36            Column         5   0  16                   0  r[16]=pseudo.column 0
  37            Compare       10  16   1  k(1, Binary)     0  r[10..10]==r[16..16]
  38            Jump          39  43  39                   0  ; start new group if comparison is not equal
  39            Gosub          7  52   0                   0  ; check if ended group had data, and output if so
  40            Move          16  10   1                   0  r[10..10]=r[16..16]
  41            IfPos          9  63   0                   0  r[9]>0 -> r[9]-=0, goto 63; check abort flag
  42            Gosub         15  60   0                   0  ; goto clear accumulator subroutine
  43            AggStep        0  17  12  count            0  accum=r[12] step(r[17])
  44            If             8  46   0                   0  if r[8] goto 46; don't emit group columns if continuing existing group
  45            Column         5   0  11                   0  r[11]=pseudo.column 0
  46            Integer        1   8   0                   0  r[8]=1; indicate data in accumulator
  47          SorterNext       4  35   0                   0
  48          Gosub            7  52   0                   0  ; emit row for final group
  49          Goto             0  63   0                   0  ; group by finished
  50          Integer          1   9   0                   0  r[9]=1
  51        Return             7   0   0                   0
  52        IfPos              8  54   0                   0  r[8]>0 -> r[8]-=0, goto 54; output group by row subroutine start
  53      Return               7   0   0                   0
  54      AggFinal             0  12   0  count            0  accum=r[12]
  55      Copy                12  18   0                   0  r[18]=r[12]
  56      Copy                11  19   0                   0  r[19]=r[11]
  57      MakeRecord          18   2   6                   0  r[6]=mkrec(r[18..19])
  58      SorterInsert         3   6   0  0                0  key=r[6]
  59    Return                 7   0   0                   0
  60    Null                   0  11  12                   0  r[11..12]=NULL; clear accumulator subroutine start
  61    Integer                0   8   0                   0  r[8]=0
  62  Return                  15   0   0                   0
  63  OpenPseudo               6   6   2                   0  2 columns in r[6]
  64  SorterSort               3  70   0                   0
  65    SorterData             3   6   6                   0  r[6]=data
  66    Column                 6   1   4                   0  r[4]=pseudo.column 1
  67    Column                 6   0   5                   0  r[5]=pseudo.column 0
  68    ResultRow              4   2   0                   0  output=r[4..5]
  69  SorterNext               3  65   0                   0
  70  Halt                     0   0   0                   0
  71  Transaction              0   1   6                   0  iDb=0 tx_mode=Read
  72  Integer                  1  17   0                   0  r[17]=1
  73  Goto                     0   1   0                   0
