testing/runner/tests/snapshot_tests/setops/snapshots/setops__union-with-limit.snap
---
source: setops.sqltest
expression: |-
  SELECT name, department FROM current_employees
      UNION
      SELECT name, department FROM former_employees
      LIMIT 10;
info:
  statement_type: SELECT
  tables:
  - current_employees
  - former_employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--UNION USING TEMP B-TREE
      `--SCAN former_employees

BYTECODE
addr  opcode          p1  p2  p3  p4              p5  comment
   0  Init             0  26   0                   0  Start at 26
   1  Integer         10   1   0                   0  r[1]=10; LIMIT counter
   2  IfNot            1  25   0                   0  if !r[1] goto 25
   3  OpenEphemeral    0   0   0                   0  cursor=0 is_table=false
   4  OpenRead         1   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   5  Rewind           1  11   0                   0  Rewind table current_employees
   6    Column         1   1   2                   0  r[2]=current_employees.name
   7    Column         1   2   3                   0  r[3]=current_employees.department
   8    MakeRecord     2   2   4                   0  r[4]=mkrec(r[2..3]); for compound_dedupe
   9    IdxInsert      0   4   0                   8  key=r[4]
  10  Next             1   6   0                   0
  11  OpenRead         2   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
  12  Rewind           2  18   0                   0  Rewind table former_employees
  13    Column         2   1   5                   0  r[5]=former_employees.name
  14    Column         2   2   6                   0  r[6]=former_employees.department
  15    MakeRecord     5   2   7                   0  r[7]=mkrec(r[5..6]); for compound_dedupe
  16    IdxInsert      0   7   0                   8  key=r[7]
  17  Next             2  13   0                   0
  18  Rewind           0  23   0                   0  Rewind  ephemeral(compound_dedupe)
  19    Column         0   0   8                   0  r[8]=ephemeral(compound_dedupe).name
  20    Column         0   1   9                   0  r[9]=ephemeral(compound_dedupe).department
  21    ResultRow      8   2   0                   0  output=r[8..9]
  22    DecrJumpZero   1  24   0                   0  if (--r[1]==0) goto 24
  23  Next             0  19   0                   0
  24  Close            0   0   0                   0
  25  Halt             0   0   0                   0
  26  Transaction      0   1   6                   0  iDb=0 tx_mode=Read
  27  Goto             0   1   0                   0
